force-app/main/default/objects/Prestation_distributeur__c/Prestation_distributeur__c.object-meta.xml
<CustomObject>
    <description>Objet qui contient les informations concernant la prestation de service du client</description>
    <label>Prestation distributeur</label>
    <nameField>
        <label>Prestation distributeur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prestations distributeurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>