force-app/main/default/objects/Prestation_distributeur__c/fields/Accessibilite__c.field-meta.xml
<CustomField>
    <fullName>Accessibilite__c</fullName>
    <label>Accessibilité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>