force-app/main/default/objects/Prestation_distributeur__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prestations distributeurs</relationshipLabel>
    <relationshipName>Prestations_distributeurs</relationshipName>
    <type>Lookup</type>
</CustomField>