force-app/main/default/objects/Prestation_distributeur__c/fields/Civilite_interlocuteur_intervention__c.field-meta.xml
<CustomField>
    <fullName>Civilite_interlocuteur_intervention__c</fullName>
    <description>@description : champ civilité interlocuteur intervention
@projet: smile</description>
    <label>Civilité interlocuteur intervention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MLLE</fullName>
            </value>
            <value>
                <fullName>MME</fullName>
            </value>
            <value>
                <fullName>MLLES</fullName>
            </value>
            <value>
                <fullName>MME et MLLE</fullName>
            </value>
            <value>
                <fullName>MMES</fullName>
            </value>
            <value>
                <fullName>AUTRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>