force-app/main/default/objects/Prestation_distributeur__c/fields/ConsommationSansFournisseur__c.field-meta.xml
<CustomField>
    <fullName>ConsommationSansFournisseur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remontée de la donnée du distributeur qui permet d&apos;identifier si le PDL est dans un cas de consommation sans fournisseur. Applicable uniquement pour le Gaz</description>
    <label>ConsommationSansFournisseur</label>
    <type>Checkbox</type>
</CustomField>