force-app/main/default/objects/Prestation_distributeur__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prestations distributeurs</relationshipLabel>
    <relationshipName>Prestations_distributeurs</relationshipName>
    <type>Lookup</type>
</CustomField>