force-app/main/default/objects/Prestation_distributeur__c/fields/Creneau__c.field-meta.xml
<CustomField>
    <fullName>Creneau__c</fullName>
    <label>Créneau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Journée</fullName>
            </value>
            <value>
                <fullName>Début de matinée</fullName>
            </value>
            <value>
                <fullName>Fin de matinée</fullName>
            </value>
            <value>
                <fullName>Midi</fullName>
            </value>
            <value>
                <fullName>Début d&apos;après midi</fullName>
            </value>
            <value>
                <fullName>Fin d&apos;après midi</fullName>
            </value>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Fin d’après midi</fullName>
            </value>
            <value>
                <fullName>Fin de journée</fullName>
            </value>
            <value>
                <fullName>Début de soirée</fullName>
            </value>
            <value>
                <fullName>Milieu de soirée</fullName>
            </value>
            <value>
                <fullName>Soir</fullName>
            </value>
            <value>
                <fullName>Fin de soirée</fullName>
            </value>
            <value>
                <fullName>Après midi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>