force-app/main/default/objects/Prestation_distributeur__c/fields/Date_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_d_intervention__c</fullName>
    <description>Intervention date for the modification of technical properties of contact</description>
    <label>Date d&apos;intervention</label>
    <type>Date</type>
</CustomField>