force-app/main/default/objects/Prestation_distributeur__c/fields/Date_dernier_index__c.field-meta.xml
<CustomField>
    <fullName>Date_dernier_index__c</fullName>
    <label>Date dernier index</label>
    <type>Date</type>
</CustomField>