force-app/main/default/objects/Prestation_distributeur__c/fields/Date_Derniere_Telereleve__c.field-meta.xml
<CustomField>
    <fullName>Date_Derniere_Telereleve__c</fullName>
    <description>Gaz
Date à laquelle on a reçu une relève du PDL</description>
    <label>Date Derniere Telereleve</label>
    <type>Date</type>
</CustomField>