force-app/main/default/objects/Prestation_distributeur__c/fields/Date_refus_telereleve__c.field-meta.xml
<CustomField>
    <fullName>Date_refus_telereleve__c</fullName>
    <description>Gaz
Date permettant de déterminer si on est dans le cas d&apos;un PDL non Gazpar avec ou sans refus de télérelève</description>
    <label>Date refus telereleve</label>
    <type>Date</type>
</CustomField>