force-app/main/default/objects/Prestation_distributeur__c/fields/Date_statut_prestation__c.field-meta.xml
<CustomField>
    <fullName>Date_statut_prestation__c</fullName>
    <description>@description: ce champ prend le Date statut prestation
@projet: smile</description>
    <label>Date statut prestation</label>
    <type>Date</type>
</CustomField>