force-app/main/default/objects/Prestation_distributeur__c/fields/DGI__c.field-meta.xml
<CustomField>
    <fullName>DGI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DGI</label>
    <type>Checkbox</type>
</CustomField>