force-app/main/default/objects/Prestation_distributeur__c/fields/Elec_Intervention_en_option__c.field-meta.xml
<CustomField>
    <fullName>Elec_Intervention_en_option__c</fullName>
    <description>Elec
Champ formule permettant de déterminer si une OPS avec Intervention est possible sur un PDL.</description>
    <formula>IF( 
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL05_Secteur_activite_Elec,OR(AND(TEXT(Niveau_d_ouverture_aux_services__c)&lt;&gt;&apos;Niveau 1&apos;,TEXT(Niveau_d_ouverture_aux_services__c) &lt;&gt;&apos;Niveau 2&apos;),TEXT(SI_contractuel__c)&lt;&gt;$Label.SM_CL13_SI_contractuel_GINKO, 
TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL14_Type_de_compteur_LINKY),AND(Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe_elec,ISBLANK(Puissance_limitee__c)), 
OR 
( 
AND( 
OR(TEXT(Situation_de_vente__c)=$Label.SM_CL07_Situation_de_vente_RES,TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM),OR(Etat_PDL__c=$Label.SM_CL12_Etat_PDL_En_Service,Etat_PDL__c=$Label.SM_CL16_Etat_PDL_Resilie)
), 
AND( 
OR(TEXT(Situation_de_vente__c)=$Label.SM_CL07_Situation_de_vente_RES,TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF),Etat_PDL__c=$Label.SM_CL12_Etat_PDL_En_Service

) 
) 
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elec Intervention en option</label>
    <type>Checkbox</type>
</CustomField>