force-app/main/default/objects/Prestation_distributeur__c/fields/Etat_du_compteur__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_compteur__c</fullName>
    <label>Etat du compteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>