force-app/main/default/objects/Prestation_distributeur__c/fields/Etat_PDL__c.field-meta.xml
<CustomField>
    <fullName>Etat_PDL__c</fullName>
    <label>Etat PDL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>