force-app/main/default/objects/Prestation_distributeur__c/fields/Flux__c.field-meta.xml
<CustomField>
    <fullName>Flux__c</fullName>
    <label>Flux</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>