force-app/main/default/objects/Prestation_distributeur__c/fields/Fraude__c.field-meta.xml
<CustomField>
    <fullName>Fraude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ permettant de détecter s&apos;il y a une fraude sur le PDL</description>
    <label>Fraude</label>
    <type>Checkbox</type>
</CustomField>