force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_Absence_d_index_depuis_5_jours__c.field-meta.xml
<CustomField>
    <fullName>Gaz_Absence_d_index_depuis_5_jours__c</fullName>
    <description>Gaz 
Champ formule permettant de déterminer si on a pas reçu d&apos;index télérelevé depuis 5 jours; Permet en l’occurrence détecter s&apos;il y a un dysfonctionnement sur le compteur.</description>
    <formula>IF( 
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz, Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,TODAY()-Date_Derniere_Telereleve__c&gt;5,TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,
OR 
( 
AND( 
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, 
 
OR( 
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre,!DGI__c,!ConsommationSansFournisseur__c
), 
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,MHS_en_cours__c,!DGI__c 
), 
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,!MHS_en_cours__c,!DGI__c 
) 
) 
), 
AND( 
TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF,
OR(
MHS_en_cours__c,!MHS_en_cours__c

)
)
) 
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz Absence d&apos;index depuis 5 jours</label>
    <type>Checkbox</type>
</CustomField>