force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_Autoreleve_facultative__c.field-meta.xml
<CustomField>
    <fullName>Gaz_Autoreleve_facultative__c</fullName>
    <description>Gaz 
Champ formule permettant de déterminer si une OPS avec autorelève est possible sur un PDL.</description>
    <formula>IF(
AND(
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz,
OR
(
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM,
ISBLANK(Date_refus_telereleve__c),
TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,
Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,

OR(
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,!DGI__c
),
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre,OR(!DGI__c,DGI__c)
)
)
),
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF

),
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL11_Situation_de_vente_CHO
)
)
)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz Autoreleve facultative</label>
    <type>Checkbox</type>
</CustomField>