force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_Autoreleve_obligatoire__c.field-meta.xml
<CustomField>
    <fullName>Gaz_Autoreleve_obligatoire__c</fullName>
    <description>Gaz
Champ formule permettant de déterminer si une OPS avec autorelève est obligatoire sur un PDL.</description>
    <formula>IF( AND( TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz, TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, ISBLANK(Date_refus_telereleve__c), TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar, Etat_du_compteur__c =$Label.SM_CL08_EtatCompteur_non_coupe,  Etat_PDL__c =$Label.SM_CL09_Etat_PDL_non_libre, !MHS_en_cours__c, DGI__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz Autoreleve obligatoire</label>
    <type>Checkbox</type>
</CustomField>