force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_consommation_sans_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Gaz_consommation_sans_fournisseur__c</fullName>
    <description>Gaz
Champ formule permettant de déterminer si une consommation sans fournisseur est détectée</description>
    <formula>IF( 
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz, Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe, 
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre, 
TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,ConsommationSansFournisseur__c,
OR(
!DGI__c
,
DGI__c
)
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz consommation sans fournisseur</label>
    <type>Checkbox</type>
</CustomField>