force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_index_calcule__c.field-meta.xml
<CustomField>
    <fullName>Gaz_index_calcule__c</fullName>
    <description>Gaz Champ formule permettant de déterminer si une OPS avec index calculé est possible sur un PDL.</description>
    <formula>IF( 
AND( 
TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF,TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz,TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,!MHS_en_cours__c 
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz index calcule</label>
    <type>Checkbox</type>
</CustomField>