force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_intervention_obligatoire_CHF__c.field-meta.xml
<CustomField>
    <fullName>Gaz_intervention_obligatoire_CHF__c</fullName>
    <description>Gaz
Champ formule permettant de déterminer si une OPS avec Intervention est obligatoire sur un PDL dans le cas d&apos;un CHF</description>
    <formula>IF(
AND(
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz,TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF,Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_coupe,
OR(
AND(TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,MHS_en_cours__c
),
AND(TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,!MHS_en_cours__c
),
AND(TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,MHS_en_cours__c
),
AND(TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,!MHS_en_cours__c
)
)
)

,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz intervention obligatoire CHF</label>
    <type>Checkbox</type>
</CustomField>