force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_intervention_obligatoire_EM__c.field-meta.xml
<CustomField>
    <fullName>Gaz_intervention_obligatoire_EM__c</fullName>
    <description>Gaz 
Champ formule permettant de déterminer si une OPS avec Intervention est obligatoire sur un PDL dans le cas d&apos;un EM</description>
    <formula>IF(
AND(
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz,
OR
(
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,
OR(
AND(Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_coupe,
OR(
AND(!MHS_en_cours__c,OR(Fraude__c,DGI__c)
),
AND(!MHS_en_cours__c,!Fraude__c,!DGI__c
),
AND(MHS_en_cours__c
)
)
),
AND(Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,
OR(
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,MHS_en_cours__c,DGI__c
),
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,!MHS_en_cours__c,DGI__c
),
AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre,!ConsommationSansFournisseur__c,DGI__c
)
)
)
)
)
,
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM,TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,

OR(
AND(Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_coupe,
OR(
AND(!ISBLANK(Date_refus_telereleve__c)
),
AND(ISBLANK(Date_refus_telereleve__c),OR(Fraude__c,DGI__c)
),
AND(ISBLANK(Date_refus_telereleve__c),!MHS_en_cours__c,!Fraude__c,!DGI__c
)
)
),
AND(Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,
OR(
AND(!ISBLANK(Date_refus_telereleve__c),Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre
),
AND(!ISBLANK(Date_refus_telereleve__c),Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre
)
,
AND(ISBLANK(Date_refus_telereleve__c),Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,DGI__c
)
)
)
)
)
)
)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz intervention obligatoire EM</label>
    <type>Checkbox</type>
</CustomField>