force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_reprise_dernier_index__c.field-meta.xml
<CustomField>
    <fullName>Gaz_reprise_dernier_index__c</fullName>
    <description>Gaz
Champ formule permettant de déterminer si une OPS avec reprise du denrier index est possible sur un PDL.</description>
    <formula>IF( 
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz, Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre, 
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar,

OR( 
DGI__c
, 
!DGI__c

)   
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz reprise dernier index</label>
    <type>Checkbox</type>
</CustomField>