force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_reprise_index_MHS__c.field-meta.xml
<CustomField>
    <fullName>Gaz_reprise_index_MHS__c</fullName>
    <formula>IF( 
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz, Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe, 
TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF, 
TEXT(Type_de_compteur__c)&lt;&gt;$Label.SM_CL07_Type_compteur_Gazpar, MHS_en_cours__c 
) 
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz reprise index MHS</label>
    <type>Checkbox</type>
</CustomField>