force-app/main/default/objects/Prestation_distributeur__c/fields/Gaz_Telereleve__c.field-meta.xml
<CustomField>
    <fullName>Gaz_Telereleve__c</fullName>
    <description>Elec Champ formule permettant de déterminer si une OPS avec télérelève est possible sur un PDL.</description>
    <formula>IF(
AND( 
TEXT(Secteur_activite__c)=$Label.SM_CL04_Secteur_activite_Gaz,TEXT(Type_de_compteur__c)=$Label.SM_CL07_Type_compteur_Gazpar,
OR
(
AND(
TEXT(Situation_de_vente__c)=$Label.SM_CL06_Situation_de_vente_EM, 
Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,
TODAY()- Date_Derniere_Telereleve__c &lt;=5,!DGI__c,
 OR(
 AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_libre
 ),
 AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,!MHS_en_cours__c
 ),
 AND(Etat_PDL__c=$Label.SM_CL09_Etat_PDL_non_libre,MHS_en_cours__c
 )
 )
 ),
AND(
 TEXT(Situation_de_vente__c)=$Label.SM_CL10_Situation_de_vente_CHF, Etat_du_compteur__c=$Label.SM_CL08_EtatCompteur_non_coupe,TODAY()-Date_Derniere_Telereleve__c&lt;=5,
 OR(
 MHS_en_cours__c
 ,
 !MHS_en_cours__c
 
 )
 ),
AND(
 TEXT(Situation_de_vente__c)=$Label.SM_CL11_Situation_de_vente_CHO
 )
 )
 )
 ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaz Telereleve</label>
    <type>Checkbox</type>
</CustomField>