force-app/main/default/objects/Prestation_distributeur__c/fields/HP_Contrat__c.field-meta.xml
<CustomField>
    <fullName>HP_Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat</label>
    <referenceTo>HP_Contrat__c</referenceTo>
    <relationshipLabel>Prestations distributeurs</relationshipLabel>
    <relationshipName>Prestations_distributeurs</relationshipName>
    <type>Lookup</type>
</CustomField>