force-app/main/default/objects/Prestation_distributeur__c/fields/HP_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>HP_Effective_Date__c</fullName>
    <description>Nouvelle date d’effet souhaitée par le client</description>
    <inlineHelpText>Nouvelle date d’effet souhaitée par le client</inlineHelpText>
    <label>Date d&apos;effet souhaitée</label>
    <type>Date</type>
</CustomField>