force-app/main/default/objects/Prestation_distributeur__c/fields/HP_isHappe__c.field-meta.xml
<CustomField>
    <fullName>HP_isHappe__c</fullName>
    <formula>RecordType.DeveloperName == &quot;HP_PrestationDistributeur&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prestation Happe</label>
    <type>Checkbox</type>
</CustomField>