force-app/main/default/objects/Prestation_distributeur__c/fields/HP_Origine_Retablissement__c.field-meta.xml
<CustomField>
    <fullName>HP_Origine_Retablissement__c</fullName>
    <label>Origine Rétablissement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HP_Type_de_prestation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HP_Client</fullName>
                <label>Client</label>
            </value>
            <value>
                <fullName>HP_happe</fullName>
                <label>happ-e</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>