force-app/main/default/objects/Prestation_distributeur__c/fields/HP_Prestation_GRD_Urgente__c.field-meta.xml
<CustomField>
    <fullName>HP_Prestation_GRD_Urgente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestation GRD Urgente</label>
    <type>Checkbox</type>
</CustomField>