force-app/main/default/objects/Prestation_distributeur__c/fields/HP_TECH_toNotify__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_toNotify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_TECH_toNotify</label>
    <type>Checkbox</type>
</CustomField>