force-app/main/default/objects/Prestation_distributeur__c/fields/HP_Type_de_prestation__c.field-meta.xml
<CustomField>
    <fullName>HP_Type_de_prestation__c</fullName>
    <label>Type de prestation Happe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Souscription</fullName>
            </value>
            <value>
                <fullName>ReductionDePuissance</fullName>
                <label>Réduction de puissance</label>
            </value>
            <value>
                <fullName>Coupure</fullName>
            </value>
            <value>
                <fullName>Retablissement</fullName>
                <label>Rétablissement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>