force-app/main/default/objects/Prestation_distributeur__c/fields/Identifiant_ENGIE__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_ENGIE__c</fullName>
    <description>Identifiant fournisseur alimenté au retour du WS de creation d&apos;OPS.</description>
    <externalId>true</externalId>
    <label>Identifiant ENGIE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>