force-app/main/default/objects/Prestation_distributeur__c/fields/Index_HC__c.field-meta.xml
<CustomField>
    <fullName>Index_HC__c</fullName>
    <label>Index HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>