force-app/main/default/objects/Prestation_distributeur__c/fields/Index_HP__c.field-meta.xml
<CustomField>
    <fullName>Index_HP__c</fullName>
    <label>Index HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>