force-app/main/default/objects/Prestation_distributeur__c/fields/Matricule__c.field-meta.xml
<CustomField>
    <fullName>Matricule__c</fullName>
    <label>Matricule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>