force-app/main/default/objects/Prestation_distributeur__c/fields/MHS_en_cours__c.field-meta.xml
<CustomField>
    <fullName>MHS_en_cours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ permettant de déterminer s&apos;il y a une MHS en cours</description>
    <label>MHS en cours</label>
    <type>Checkbox</type>
</CustomField>