force-app/main/default/objects/Prestation_distributeur__c/fields/MHS_en_cours_au__c.field-meta.xml
<CustomField>
    <fullName>MHS_en_cours_au__c</fullName>
    <label>MHS en cours au</label>
    <type>Date</type>
</CustomField>