force-app/main/default/objects/Prestation_distributeur__c/fields/Mois_de_deploiement__c.field-meta.xml
<CustomField>
    <fullName>Mois_de_deploiement__c</fullName>
    <label>Mois de déploiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>