force-app/main/default/objects/Prestation_distributeur__c/fields/Nb_cadrans__c.field-meta.xml
<CustomField>
    <fullName>Nb_cadrans__c</fullName>
    <label>Nb cadrans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>