force-app/main/default/objects/Prestation_distributeur__c/fields/Niveau_d_ouverture_aux_services__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_ouverture_aux_services__c</fullName>
    <label>Niveau d&apos;ouverture aux services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niveau 0</fullName>
            </value>
            <value>
                <fullName>Niveau 1</fullName>
            </value>
            <value>
                <fullName>Niveau 2</fullName>
            </value>
            <value>
                <fullName>Inconnu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>