force-app/main/default/objects/Prestation_distributeur__c/fields/Nom_contact_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Nom_contact_d_intervention__c</fullName>
    <description>Nom du contact d&apos;intervention à alimenter au retour du WS ou lors des flux X12 et SDEM</description>
    <label>Nom contact d&apos;intervention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>