force-app/main/default/objects/Prestation_distributeur__c/fields/Numero_affaire_distributeur__c.field-meta.xml
<CustomField>
    <fullName>Numero_affaire_distributeur__c</fullName>
    <label>Numéro d&apos;affaire distributeur</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>