force-app/main/default/objects/Prestation_distributeur__c/fields/Numero_dernier_jalon__c.field-meta.xml
<CustomField>
    <fullName>Numero_dernier_jalon__c</fullName>
    <description>@description: ce champ comporte le Numéro dernier jalon
@projet: smile</description>
    <label>Numéro dernier jalon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>