force-app/main/default/objects/Prestation_distributeur__c/fields/Numero_PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>Numero_PDL_PCE__c</fullName>
    <label>Numéro de PDL/PCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>