force-app/main/default/objects/Prestation_distributeur__c/fields/Prenom_contact_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Prenom_contact_d_intervention__c</fullName>
    <description>Prenom du contact intervention alimenté au retour des flux distributeur ou des flux X12 et SDEM</description>
    <label>Prenom contact d&apos;intervention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>