force-app/main/default/objects/Prestation_distributeur__c/fields/Puissance_limitee__c.field-meta.xml
<CustomField>
    <fullName>Puissance_limitee__c</fullName>
    <description>Champ permettant de déterminer si le PDL possède un limiteur de puissance dans le cadre d&apos;une vente afin de déterminer si une intervention est obligatoire ou pas.</description>
    <label>Puissance limitee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>