force-app/main/default/objects/Prestation_distributeur__c/fields/Secteur_activite__c.field-meta.xml
<CustomField>
    <fullName>Secteur_activite__c</fullName>
    <label>Secteur d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elec</fullName>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>